--- a/src/components/web-sidebar/web-sidebar.style.css
+++ b/src/components/web-sidebar/web-sidebar.style.css
@@ -2,14 +2,52 @@
   display: block;
   width: 256px;
   height: 100%;
-  padding: 24px;
-  background-color: var(--color-sidebar);
+  background-color: var(--color-app-bar);
+  border-right: 1px solid var(--color-app-border);
+}
+
+.webSidebar__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 80px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-bottom: 1px solid var(--color-app-border);
+}
+
+.webSidebar__body {
+  padding: 16px;
+}
+
+.webSidebar__logo {
+  margin-right: 16px;
+  flex: none;
+  width: 48px;
+  height: 48px;
+  border-radius: 9999px;
+  overflow: hidden;
 }
 
 .webSidebar__title {
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 24px;
+  flex: 1;
+  font-weight: 500;
   letter-spacing: 0.2px;
   color: var(--color-primary-text);
+}
+
+.webSidebar__title--sm {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.webSidebar__title--md {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.webSidebar__title--lg {
+  font-size: 18px;
+  line-height: 24px;
 }
