--- a/src/main.css
+++ b/src/main.css
@@ -3,17 +3,19 @@
 @import "./components/web-app/web-app.style.css";
 @import "./components/web-sidebar/web-sidebar.style.css";
 @import "./components/web-view/web-view.style.css";
+@import "./components/web-bar/web-bar.style.css";
 
 :root {
   --color-background: hsl(226, 71%, 40%);
-  --color-app: hsl(222, 47%, 12%);
-  --color-sidebar: hsl(217, 47%, 14%);
-  --color-primary-text: hsl(210, 40%, 96%);
+  --color-app: hsl(222, 47%, 11%);
+  --color-app-bar: hsl(217, 33%, 17%);
+  --color-app-border: hsl(215, 25%, 21%);
+  --color-primary-text: hsl(214, 32%, 91%);
 }
 
 .page {
   background-color: var(--color-background);
-  font-family: "Inter", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Plus Jakarta Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .page__app {
@@ -21,4 +23,5 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  padding: 24px;
 }
