--- a/src/components/web-sidebar/web-sidebar.style.css
+++ b/src/components/web-sidebar/web-sidebar.style.css
@@ -48,6 +48,14 @@
 }
 
 .webSidebar__title--lg {
-  font-size: 18px;
+  font-size: 20px;
   line-height: 24px;
+}
+
+.webSidebar__subtitle {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
+  color: var(--color-secondary-text);
 }
