--- a/src/main.css
+++ b/src/main.css
@@ -11,11 +11,16 @@
   --color-app-bar: hsl(217, 33%, 17%);
   --color-app-border: hsl(215, 25%, 21%);
   --color-primary-text: hsl(214, 32%, 91%);
+  --color-secondary-text: hsl(215, 20%, 65%);
 }
 
 .page {
   background-color: var(--color-background);
   font-family: "Plus Jakarta Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.page__icons {
+  display: none;
 }
 
 .page__app {
