feat: handle navigation items

--- a/src/components/web-sidebar/web-sidebar.style.css
+++ b/src/components/web-sidebar/web-sidebar.style.css
@@ -53,8 +53,9 @@
 }
 
 .webSidebar__subtitle {
+  margin-bottom: 16px;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: 1.4px;
   text-transform: uppercase;
   color: var(--color-secondary-text);
