--- a/src/components/web-navigation-item/web-navigation-item.style.css
+++ b/src/components/web-navigation-item/web-navigation-item.style.css
@@ -1,3 +1,33 @@
 .webNavigationItem {
   display: block;
 }
+
+.webNavigationItem__button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: calc(100% + 16px);
+  min-height: 48px;
+  padding-left: 16px;
+  padding-right: 16px;
+  transform: translateX(-16px);
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--color-secondary-text);
+}
+
+.webNavigationItem__button:disabled {
+  background-color: var(--color-selected);
+  color: var(--color-primary-text);
+  cursor: default;
+}
+
+@media screen and (hover: hover) {
+  .webNavigationItem__button:not(:disabled):hover {
+    color: var(--color-primary-text);
+  }
+}
