--- a/src/components/web-bar/web-bar.style.css
+++ b/src/components/web-bar/web-bar.style.css
@@ -14,10 +14,43 @@
   padding-right: 24px;
 }
 
+.webBar__section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+
+.webBar__section--left {
+  flex: 1;
+}
+
+.webBar__section--right {
+  flex: none;
+  padding-left: 24px;
+  border-left: 1px solid var(--color-app-border);
+}
+
 .webBar__title {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.4px;
   color: var(--color-primary-text);
+}
+
+.webBar__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  height: 48px;
+  border-radius: 9999px;
+  background-color: var(--color-app);
+}
+
+.webBar__icon {
+  width: 20px;
+  height: 20px;
+  color: var(--color-secondary-text);
 }
