--- a/src/components/web-app/web-app.style.css
+++ b/src/components/web-app/web-app.style.css
@@ -5,7 +5,7 @@
   width: 1440px;
   height: 800px;
   background-color: var(--color-app);
-  border-radius: 8px;
+  box-shadow: var(--color-app-shadow);
   overflow: hidden;
 }
 
