--- a/src/components/web-power-button/web-power-button.style.css
+++ b/src/components/web-power-button/web-power-button.style.css
@@ -1,78 +1,36 @@
-.webThemeButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 16px;
-  background-color: var(--color-app);
-  border-radius: 8px;
+.webPowerButton {
+  display: block;
 }
 
-.webThemeButton__container {
+.webPowerButton__container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
+  width: 100%;
+  min-height: 48px;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color: hsl(210, 11%, 14%);
+  color: var(--color-typo-primary);
 }
 
-.webThemeButton__icon {
+.webPowerButton__label {
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 20px;
+  letter-spacing: 0.8px;
+}
+
+.webPowerButton__icon {
+  margin-right: 8px;
   width: 16px;
   height: 16px;
-  color: var(--color-secondary-text);
 }
 
-.webThemeButton__label {
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-.webThemeButton__input {
-  --switch-transition-duration: 150ms;
-  --track-size: 40px;
-  --track-padding: 4px;
-  --track-color-inactive: var(--color-app-border);
-  --track-color-hover: hsl(0, 0%, 60%);
-  --track-color-active: var(--color-accent);
-  --thumb-size: 12px;
-  --thumb-color: var(--color-primary-text);
-  --thumb-highlight-color: hsl(0, 0%, 30%);
-  --thumb-highlight-size: 0;
-  --thumb-position: 0%;
-
-  margin: 0;
-  display: block;
-  appearance: none;
-  width: var(--track-size);
-  height: calc(var(--thumb-size) + (var(--track-padding) * 2));
-  padding: var(--track-padding);
-  cursor: pointer;
-  border: none;
-  background-color: var(--track-color-inactive);
-  border-radius: 9999px;
-  outline-offset: 0.25rem; /* 4px */
-  transition: background-color var(--switch-transition-duration) ease;
-}
-
-.webThemeButton__input:checked {
-  background-color: var(--track-color-active);
-  --thumb-position: calc(var(--track-size) - (var(--track-padding) * 2) - 100%);
-}
-
-.webThemeButton__input::before {
-  content: "";
-  display: block;
-  width: var(--thumb-size);
-  height: var(--thumb-size);
-  background-color: var(--thumb-color);
-  border-radius: 9999px;
-  box-shadow: 0 0 0 var(--thumb-highlight-size) var(--thumb-highlight-color);
-  transform: translateX(var(--thumb-position));
-  user-select: none;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.webThemeButton__input:hover {
-  --thumb-highlight-size: 8px;
-}
-
-.webThemeButton__input:not(:checked):hover {
-  background-color: var(--track-color-hover);
+@media screen and (hover: hover) {
+  .webPowerButton__container:hover {
+    color: hsl(339, 65%, 60%);
+  }
 }
