--- a/src/components/web-theme-button/web-theme-button.style.css
+++ b/src/components/web-theme-button/web-theme-button.style.css
@@ -1,10 +1,5 @@
 .webThemeButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 16px;
-  background-color: var(--color-app);
-  border-radius: 8px;
+  display: block;
 }
 
 .webThemeButton__container {
@@ -16,7 +11,7 @@
 .webThemeButton__icon {
   width: 16px;
   height: 16px;
-  color: var(--color-secondary-text);
+  color: var(--color-toggle-button-icon);
 }
 
 .webThemeButton__label {
@@ -25,14 +20,13 @@
 }
 
 .webThemeButton__input {
-  --switch-transition-duration: 150ms;
   --track-size: 40px;
   --track-padding: 4px;
-  --track-color-inactive: var(--color-app-border);
+  --track-color-inactive: var(--color-toggle-button-track);
   --track-color-hover: hsl(0, 0%, 60%);
   --track-color-active: var(--color-accent);
   --thumb-size: 12px;
-  --thumb-color: var(--color-primary-text);
+  --thumb-color: var(--color-accent);
   --thumb-highlight-color: hsl(0, 0%, 30%);
   --thumb-highlight-size: 0;
   --thumb-position: 0%;
@@ -47,8 +41,7 @@
   border: none;
   background-color: var(--track-color-inactive);
   border-radius: 9999px;
-  outline-offset: 0.25rem; /* 4px */
-  transition: background-color var(--switch-transition-duration) ease;
+  outline-offset: 4px;
 }
 
 .webThemeButton__input:checked {
