--- a/src/main.css
+++ b/src/main.css
@@ -7,16 +7,60 @@
 @import "./components/web-view/web-view.style.css";
 @import "./components/web-bar/web-bar.style.css";
 @import "./components/web-theme-button/web-theme-button.style.css";
+@import "./components/web-power-button/web-power-button.style.css";
 
 :root {
+  --color-app: hsl(210, 17%, 97%);
+  --color-app-shadow:
+    0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
+
+  --color-bar: hsl(0, 0%, 100%);
+  --color-bar-border: hsl(210, 17%, 92%);
+
+  --color-paper: hsl(0, 0%, 100%);
+
+  --color-toggle-button-shadow:
+    0 1px 3px 0 rgb(0 0 0 / 0.1),
+    0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --color-toggle-button-track: hsl(0, 0%, 100%);
+  --color-toggle-button-icon: hsl(210, 11%, 71%);
+  --color-toggle-button-icon-hover: hsl(210, 10%, 23%);
+  --color-toggle-button-icon-active: #f59f00;
+
+  --color-typo-primary: hsl(210, 9%, 31%);
+  --color-typo-secondary: hsl(210, 7%, 50%);
+  --color-typo-positive: hsl(162, 68%, 54%);
+  --color-typo-negative: hsl(339, 88%, 74%);
+
+  --color-nav-active-item: hsl(210, 17%, 92%);
+
   --color-background: hsl(226, 71%, 40%);
-  --color-app: hsl(222, 47%, 11%);
   --color-app-bar: hsl(217, 33%, 17%);
   --color-app-border: hsl(215, 25%, 21%);
   --color-selected: hsl(215, 25%, 27%);
   --color-primary-text: hsl(214, 32%, 91%);
   --color-secondary-text: hsl(215, 20%, 65%);
   --color-accent: hsl(228, 89%, 63%);
+}
+
+:root[data-theme="dark"] {
+  --color-app: hsl(216, 12%, 8%);
+
+  --color-bar: hsl(210, 11%, 11%);
+  --color-bar-border: hsl(210, 11%, 15%);
+
+  --color-toggle-button-track: hsl(210, 10%, 23%);
+  --color-toggle-button-icon: hsl(210, 11%, 71%);
+  --color-toggle-button-icon-hover: hsl(0, 0%, 100%);
+  --color-toggle-button-icon-active: #f59f00;
+
+  --color-typo-primary: hsl(210, 14%, 80%);
+  --color-typo-secondary: hsl(210, 7%, 52%);
+  --color-typo-positive: hsl(162, 87%, 35%);
+  --color-typo-negative: hsl(339, 65%, 60%);
+
+  --color-nav-active-item: hsl(210, 9%, 20%);
 }
 
 .page {
