--- a/src/components/web-sidebar/web-sidebar.style.css
+++ b/src/components/web-sidebar/web-sidebar.style.css
@@ -31,16 +31,6 @@
   padding: 24px;
 }
 
-.webSidebar__footer {
-  flex: none;
-  padding: 24px;
-  border-top: 1px solid var(--color-bar-border);
-}
-
-.webSidebar__settings {
-  margin-top: auto;
-}
-
 .webSidebar__logo {
   margin-right: 12px;
   flex: none;
@@ -72,15 +62,29 @@
   line-height: 24px;
 }
 
-.webSidebar__subtitle {
-  margin-bottom: 16px;
+.webSidebar__section {
+  margin-bottom: 48px;
+}
+
+.webSidebar__section:last-child {
+  margin-top: auto;
+  margin-bottom: 0;
+}
+
+.webSidebar__sectionTitle {
+  margin-bottom: 20px;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 1.4px;
   text-transform: uppercase;
   color: var(--color-typo-secondary);
 }
 
-.webSidebar__themeButton {
-  margin-top: auto;
+.webSidebar__switch {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.webSidebar__switch:last-child {
+  margin-bottom: 0;
 }
