feat: rework buttons

--- a/src/components/web-button/web-button.style.css
+++ b/src/components/web-button/web-button.style.css
@@ -1,8 +1,8 @@
-.webPowerButton {
+.webButton {
   display: block;
 }
 
-.webPowerButton__container {
+.webButton__container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -11,10 +11,12 @@
   min-height: 48px;
   padding-left: 16px;
   padding-right: 16px;
-  color: var(--color-typo-primary);
+  background-color: var(--color-accent);
+  color: #fff;
+  border-radius: 9999px;
 }
 
-.webPowerButton__label {
+.webButton__label {
   font-size: 12px;
   font-weight: 700;
   text-transform: uppercase;
@@ -22,14 +24,8 @@
   letter-spacing: 1px;
 }
 
-.webPowerButton__icon {
+.webButton__icon {
   margin-right: 8px;
-  width: 16px;
-  height: 16px;
-}
-
-@media screen and (hover: hover) {
-  .webPowerButton__container:hover {
-    color: hsl(339, 65%, 60%);
-  }
+  width: 20px;
+  height: 20px;
 }
