--- a/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
+++ b/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
@@ -7,7 +7,7 @@
   padding: 16px;
   background-color: var(--color-bar);
   border-radius: 6px;
-  border-left: 6px solid #5f3dc4;
+  border-left: 6px solid hsl(255 53% 50% / 0.6);
   box-shadow:
     0 1px 3px 0 rgb(0 0 0 / 0.1),
     0 1px 2px -1px rgb(0 0 0 / 0.1);
