--- a/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
+++ b/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
@@ -7,7 +7,7 @@
   padding: 16px;
   background-color: var(--color-bar);
   border-radius: 6px;
-  border-left: 6px solid hsl(255 53% 50% / 0.6);
+  border-left: 6px solid hsl(162, 73%, 46%);
   box-shadow:
     0 1px 3px 0 rgb(0 0 0 / 0.1),
     0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -15,24 +15,27 @@
 
 .webDispatchGroup__name {
   margin-bottom: 16px;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
-  line-height: 20px;
+  line-height: 16px;
   text-transform: uppercase;
   letter-spacing: 1.2px;
   color: var(--color-typo-primary);
 }
 
 .webDispatchGroup__placeholder {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 12px;
   width: 100%;
-  padding: 8px;
+  padding: 12px;
   background-color: var(--color-app);
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
 }
 
 .webDispatchGroup__placeholderTip {
-  padding: 8px;
+  padding: 4px;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
