--- a/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
+++ b/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
@@ -14,10 +14,10 @@
 }
 
 .webDispatchGroup__name {
-  margin-bottom: 16px;
+  margin-bottom: 12px;
   font-size: 12px;
-  font-weight: 600;
-  line-height: 16px;
+  font-weight: 700;
+  line-height: 12px;
   text-transform: uppercase;
   letter-spacing: 1.2px;
   color: var(--color-typo-primary);
@@ -35,9 +35,11 @@
 }
 
 .webDispatchGroup__placeholderTip {
-  padding: 4px;
+  padding: 12px;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
+  border: 1px dashed var(--color-bar-border);
+  border-radius: 4px;
   color: var(--color-typo-secondary);
 }
