--- a/src/views/web-dispatch/web-dispatch-category/web-dispatch-category.style.css
+++ b/src/views/web-dispatch/web-dispatch-category/web-dispatch-category.style.css
@@ -16,7 +16,7 @@
   font-weight: 700;
   letter-spacing: 1.4px;
   text-transform: uppercase;
-  line-height: 20px;
+  line-height: 16px;
   color: var(--color-typo-secondary);
 }
 
@@ -26,5 +26,5 @@
   grid-template-columns: 1fr;
   align-content: flex-start;
   gap: 24px;
-  overflow-y: auto;
+  overflow-x: hidden;
 }
