--- a/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
+++ b/src/views/web-dispatch/web-dispatch-group/web-dispatch-group.style.css
@@ -4,7 +4,7 @@
 
 .webDispatchGroup__container {
   width: 100%;
-  padding: 16px;
+  padding: 8px 12px 12px 12px;
   background-color: var(--color-bar);
   border-radius: 4px;
   border-left: 4px solid hsl(162, 73%, 46%);
@@ -15,11 +15,10 @@
 
 .webDispatchGroup__name {
   margin-bottom: 12px;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 12px;
-  text-transform: uppercase;
-  letter-spacing: 1.2px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+  text-transform: capitalize;
   color: var(--color-typo-primary);
 }
 
@@ -32,14 +31,4 @@
   background-color: var(--color-app);
   border-radius: 8px;
   box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-}
-
-.webDispatchGroup__placeholderTip {
-  padding: 12px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-  border: 1px dashed var(--color-bar-border);
-  border-radius: 4px;
-  color: var(--color-typo-secondary);
 }
