feat: work on dispatch unit overflow

--- a/src/views/web-dispatch/web-dispatch-category/web-dispatch-category.style.css
+++ b/src/views/web-dispatch/web-dispatch-category/web-dispatch-category.style.css
@@ -23,7 +23,7 @@
 .webDispatchCategory__list {
   flex: 1;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
   align-content: flex-start;
   gap: 24px;
   overflow-x: hidden;
