--- a/src/views/web-dispatch/web-dispatch-unit/web-dispatch-unit.style.css
+++ b/src/views/web-dispatch/web-dispatch-unit/web-dispatch-unit.style.css
@@ -1,5 +1,6 @@
 .webDispatchUnit {
   display: block;
+  width: 100%;
 }
 
 .webDispatchUnit__container {
@@ -18,8 +19,9 @@
 }
 
 .webDispatchUnit__number {
-  margin-right: 16px;
-  text-align: right;
+  flex: none;
+  margin-right: 12px;
+  text-align: left;
   font-size: 36px;
   font-weight: 700;
   line-height: 44px;
@@ -28,12 +30,24 @@
   color: hsl(210, 9%, 44%);
 }
 
+.webDispatchUnit__text {
+  flex: 0 1 auto;
+  min-width: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .webDispatchUnit__name {
+  width: 100%;
   text-align: right;
   font-size: 14px;
   font-weight: 600;
   line-height: 24px;
   color: var(--color-typo-primary);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .webDispatchUnit__role {
