--- a/src/components/web-bar/web-bar.style.css
+++ b/src/components/web-bar/web-bar.style.css
@@ -1,6 +1,6 @@
 .webBar {
   display: block;
-  height: 80px;
+  height: 64px;
   background-color: var(--color-bar);
   border-bottom: 1px solid var(--color-bar-border);
 }
@@ -8,7 +8,6 @@
 .webBar__container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   height: 100%;
   padding-left: 24px;
@@ -27,11 +26,11 @@
 
 .webBar__section--right {
   flex: none;
-  gap: 16px;
+  gap: 32px;
 }
 
-.webBar__title {
-  font-size: 18px;
+.webBar__name {
+  font-size: 16px;
   font-weight: 500;
   line-height: 24px;
   color: var(--color-typo-primary);
