--- a/src/components/web-button/web-button.style.css
+++ b/src/components/web-button/web-button.style.css
@@ -8,24 +8,26 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  min-height: 48px;
-  padding-left: 16px;
-  padding-right: 16px;
-  background-color: var(--color-accent);
-  color: #fff;
-  border-radius: 9999px;
+  min-height: 40px;
+  color: var(--color-typo-primary);
+}
+
+.webButton__icon {
+  margin-right: 6px;
+  width: 20px;
+  height: 20px;
 }
 
 .webButton__label {
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
   line-height: 20px;
-  letter-spacing: 1px;
+  letter-spacing: 1.2px;
 }
 
-.webButton__icon {
-  margin-right: 8px;
-  width: 20px;
-  height: 20px;
+@media screen and (hover: hover) {
+  .webButton__container:hover {
+    color: #5c7cfa;
+  }
 }
