--- a/src/components/web-app/web-app.style.css
+++ b/src/components/web-app/web-app.style.css
@@ -1,16 +1,13 @@
 .webApp {
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-app);
-  box-shadow: var(--color-app-shadow);
+  display: block;
 }
 
-[data-screen="window"] .webApp {
+.webApp--window {
   width: 1440px;
   height: 800px;
 }
 
-[data-screen="full"] .webApp {
+.webApp--fullScreen {
   width: 100%;
   height: 100%;
 }
@@ -20,26 +17,28 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-}
-
-.webApp__body {
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
-  width: 100%;
-  height: 100%;
+  background-color: var(--color-app);
+  box-shadow: var(--color-app-shadow);
 }
 
 .webApp__bar {
   flex: none;
 }
 
+.webApp__body {
+  flex: 0 1 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  min-height: 0;
+}
+
 .webApp__sidebar {
   flex: none;
-  width: 276px;
+  width: 280px;
 }
 
 .webApp__view {
-  flex: 1;
-  max-width: calc(100% - 276px);
+  flex: 0 1 100%;
+  min-width: 0;
 }
