--- a/src/views/dispatch/web-dispatch-toolbar/web-dispatch-toolbar.style.css
+++ b/src/views/dispatch/web-dispatch-toolbar/web-dispatch-toolbar.style.css
@@ -14,6 +14,12 @@
   border-bottom: 1px solid var(--color-bar-border);
 }
 
+.webDispatchToolbar__section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .webDispatchToolbar__name {
   font-size: 16px;
   font-weight: 500;
