--- a/src/views/dispatch/web-dispatch-unit/web-dispatch-unit.style.css
+++ b/src/views/dispatch/web-dispatch-unit/web-dispatch-unit.style.css
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  height: 64px;
   padding: 8px 12px;
   background-color: var(--color-bar);
   border-radius: 4px;
