--- a/src/views/dispatch/web-dispatch-unit/web-dispatch-unit.style.css
+++ b/src/views/dispatch/web-dispatch-unit/web-dispatch-unit.style.css
@@ -4,13 +4,13 @@
 }
 
 .webDispatchUnit__container {
+  --_container-height: 104px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   width: 100%;
-  height: 64px;
-  padding: 8px 12px;
+  height: var(--_container-height);
+  padding-top: 8px;
+  padding-bottom: 8px;
   background-color: var(--color-bar);
   border-radius: 4px;
   border-left: 4px solid hsl(228, 94%, 67%);
@@ -19,13 +19,52 @@
     0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 
+.webDispatchUnit__header {
+  flex: none;
+  margin-bottom: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid var(--color-bar-border);
+}
+
+.webDispatchUnit__headerSection {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 4px;
+}
+
+.webDispatchUnit__headerSection--overflow {
+  flex: 0 1 100%;
+  min-width: 0;
+}
+
+.webDispatchUnit__lastButton {
+  margin-right: -8px;
+}
+
+.webDispatchUnit__body {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 .webDispatchUnit__number {
   flex: none;
   margin-right: 12px;
   text-align: left;
   font-size: 36px;
   font-weight: 700;
-  line-height: 44px;
+  line-height: 40px;
   text-transform: uppercase;
   letter-spacing: 0.6px;
   color: hsl(210, 9%, 44%);
@@ -40,11 +79,11 @@
 }
 
 .webDispatchUnit__name {
+  margin-right: 12px;
   width: 100%;
-  text-align: right;
   font-size: 14px;
   font-weight: 600;
-  line-height: 24px;
+  line-height: 20px;
   color: var(--color-typo-primary);
   overflow: hidden;
   text-overflow: ellipsis;
@@ -55,6 +94,15 @@
   text-align: right;
   font-size: 14px;
   font-weight: 500;
-  line-height: 24px;
+  line-height: 22px;
+  color: var(--color-typo-secondary);
+}
+
+.webDispatchUnit__phone {
+  text-align: right;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0.6px;
   color: var(--color-typo-secondary);
 }
