--- a/src/components/web-button/web-button.style.css
+++ b/src/components/web-button/web-button.style.css
@@ -1,13 +1,8 @@
 .webButton {
-  display: block;
-}
-
-.webButton__container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
   min-height: 40px;
   color: var(--color-typo-primary);
 }
@@ -27,7 +22,7 @@
 }
 
 @media screen and (hover: hover) {
-  .webButton__container:hover {
+  .webButton:hover {
     color: #fff;
   }
 }
