--- a/src/views/dispatch/components/dispatch-unit/dispatch-unit.style.css
+++ b/src/views/dispatch/components/dispatch-unit/dispatch-unit.style.css
@@ -14,6 +14,10 @@
     0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 
+.dispatchUnit--selected {
+  background-color: var(--color-bar-border);
+}
+
 .dispatchUnit__number {
   flex: none;
   margin-right: 12px;
