--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,5 @@
 @import "./styles/global.css";
+@import "./styles/trix.css";
 
 @import "./components/web-app/web-app.style.css";
 @import "./components/web-bar/web-bar.style.css";
@@ -8,11 +9,11 @@
 @import "./components/web-navigation-item/web-navigation-item.style.css";
 @import "./components/web-switch/web-switch.style.css";
 @import "./components/web-button/web-button.style.css";
+@import "./components/web-toolbar/web-toolbar.style.css";
 
 @import "./views/car/components/car-view/car-view.style.css";
 @import "./views/document/components/document-view/document-view.style.css";
 @import "./views/dispatch/components/dispatch-view/dispatch-view.style.css";
-@import "./views/dispatch/components/dispatch-toolbar/dispatch-toolbar.style.css";
 @import "./views/dispatch/components/dispatch-category/dispatch-category.style.css";
 @import "./views/dispatch/components/dispatch-group/dispatch-group.style.css";
 @import "./views/dispatch/components/dispatch-unit/dispatch-unit.style.css";
